--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,8 @@
 <h1>StaticPages#about</h1>
 <p>Find me in app/views/static_pages/about.html.erb</p>
+
+<% cache do %>
+  <% sleep 2 %>
+  <h1>Hello World!</h1>
+  <p>This is the About page and is under construction!</p>
+<% end %>
