--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,2 +1,7 @@
-<h1>StaticPages#index</h1>
-<p>Find me in app/views/static_pages/index.html.erb</p>
+<p>Welcome! The date and time is <%= Time.now %></p>
+
+<h1>Welcome to Bike Berlin</h1>
+<h2>Your source for used bikes in Berlin</h2>
+
+
+<%= image_tag("bike1.jpg", class: "img-responsive", size: "200") %>
