--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
         </div> <!-- END NAVBAR HEADER -->
 
         <div class="logo navbar-brand">
-          <a href="#">⏄</a>
+          <a href="#">Bike Berlin</a>
         </div> <!--end projectName -->
 
 
@@ -51,7 +51,7 @@
 
 <footer class="footer">
       <div class="container">
-        <p>&copy; 2015 Bikes Berlin</p>
+        <p>&copy; 2016 Bikes Berlin</p>
       </div>
 </footer>
 
