--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -10,12 +10,20 @@ body {
       color: black;
       position: relative;
       overflow-x: hidden;
+      margin-top: 40px;
 }
 
 h1 {
-  font-family: 'Amatic SC', "Courier New", Courier, monospace;
+  font-family: 'Roboto', "Courier New", Courier, monospace;
   color: black;
   text-align: center;
+}
+
+h2 {
+  font-family: "Roboto", Courier, monospace;
+  color: black;
+  text-align: center;
+  font-size: 13px;
 }
 
 .main-image {
@@ -69,8 +77,13 @@ h1 {
     position: relative;
     bottom: 0;
     width: 100%;
-    height: 60px;
+    height: 50px;
     background-color: #f5f5f5;
-    text-align: center;
     color: grey;
+    font-family: "Roboto", Courier, monospace;
+    font-size: 12px;
+    bottom: 0;
+    text-align: center;
 }
+
+.footercr { margin-top: 20px;}
