--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@product) do |f| %>
-  <% if @product.errors.any? %>
+<%= form_for(product) do |f| %>
+  <% if product.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
+      <h2><%= pluralize(product.errors.count, "error") %> prohibited this product from being saved:</h2>
 
       <ul>
-      <% @product.errors.full_messages.each do |message| %>
+      <% product.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
@@ -12,17 +12,30 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label :name %>
     <%= f.text_field :name %>
   </div>
+
   <div class="field">
-    <%= f.label :description %><br>
+    <%= f.label :description %>
     <%= f.text_area :description %>
   </div>
+
   <div class="field">
-    <%= f.label :image_url %><br>
+    <%= f.label :image_url %>
     <%= f.text_field :image_url %>
   </div>
+
+  <div class="field">
+  <%= f.label :colour %>
+  <%= f.text_field :colour %>
+  </div>
+
+  <div class="field">
+  <%= f.label :price %>
+  <%= f.text_field :price %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
