--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,19 +1,48 @@
+<h1>Products</h1>
+
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @product.name %>
-</p>
+	<div class="row">
+		<div class="col-md-3">
+		  <p>
+		  	<strong>Name:</strong>
+		  	<%= @product.name %>
+			</p>
+		</div>	
 
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
+		<div class="col-md-3">
+			<p>
+			  <strong>Description:</strong>
+			  <%= @product.description %>
+			</p>
+		</div>
 
-<p>
-  <strong>Image url:</strong>
-  <%= @product.image_url %>
-</p>
+		<div class="col-md-3">
+			<p>
+			  <strong>Image url:</strong>
+			  <%= @product.image_url %>
+			</p>
+		</div>
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+		<div class="col-md-3">
+			<p>
+			  <strong>Colour:</strong>
+			  <%= @product.colour %>
+			</p>
+		</div>
+
+		<div class="col-md-3">
+			<p>
+			  <strong>Price:</strong>
+			  <%= @product.price %>
+			</p>
+		</div>
+	
+	<div class="col-md-4">
+		<p>
+			<%= link_to 'Edit', edit_product_path(@product) %> |
+	<%= link_to 'Back', products_path %>
+		</p>
+	</div>
+
+</div>
