--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,7 +1,7 @@
-<p>Welcome! The date and time is <%= Time.now %></p>
+<%= image_tag("bike1.jpg", class: "img-responsive") %>
 
-<h1>Welcome to Bike Berlin</h1>
+<h1>Welcome to Bikes Berlin</h1>
 <h2>Your source for used bikes in Berlin</h2>
 
 
-<%= image_tag("bike1.jpg", class: "img-responsive", size: "200") %>
+
