--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -8,6 +8,8 @@ body {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
+  margin-right: 100px;
+  margin-left: 100px;
 }
 
 table {
@@ -16,7 +18,9 @@ table {
 
 p { margin: 30px;}
 
-h1, h2 { margin-top: 60px;}
+h1 { padding: 50px;}
 
 .form {padding: 30px;
 text-align: center;}
+
+
