--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,8 +1,4 @@
-<h1>About us</h1>
+<div class="header">
+<h1>about us</h1>
+</div>
 <p>Find me in app/views/static_pages/about.html.erb</p>
-
-<% cache do %>
-  <% sleep 2 %>
-  <h1>Hello World!</h1>
-  <p>This is the About page and is under construction!</p>
-<% end %>
